<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/colorPrimary">

    <TextView
        android:id="@+id/tvGrados"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="147dp"
        android:text="@string/texto_grados"
        android:textSize="72sp"
        android:textAlignment="center"
        android:textColor="@color/colorGrados"/>

    <TextView
        android:id="@+id/tvCiudad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="284dp"
        android:text="@string/texto_ciudad"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textColor="@color/colorCiudad"/>

    <TextView
        android:id="@+id/tvEstatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="-4dp"
        android:layout_marginTop="335dp"
        android:layout_marginEnd="0dp"
        android:text="@string/texto_estatus"
        android:textColor="@color/colorEstatus"
        android:textSize="24sp"
        android:textAlignment="center" />

</RelativeLayout>